// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composes shouldForwardProp on composed styled components 1`] = `
<div
  class="emotion-0 emotion-1"
/>
`;

exports[`custom shouldForwardProp works 1`] = `
.emotion-0,
.emotion-0 * {
  fill: #0000ff;
}

<svg
  class="emotion-0 emotion-1"
  height="100px"
  width="100px"
>
  <rect
    height="100"
    style="stroke: #ff0000;"
    width="100"
    x="10"
    y="10"
  />
</svg>
`;

exports[`no prop filtering on non string tags 1`] = `
.emotion-0 {
  color: green;
}

<a
  a="true"
  aria-label="some label"
  b="true"
  class="emotion-0 emotion-1"
  cool="true"
  data-wow="value"
  filtering="true"
  href="link"
  is="true"
  prop="true"
  wow="true"
>
  hello world
</a>
`;

exports[`no prop filtering on string tags started with upper case 1`] = `
.emotion-0 {
  color: green;
}

<somecustomlink
  a="true"
  aria-label="some label"
  b="true"
  class="emotion-0 emotion-1"
  cool="true"
  data-wow="value"
  filtering="true"
  href="link"
  is="true"
  prop="true"
  wow="true"
>
  hello world
</somecustomlink>
`;

exports[`prop filtering 1`] = `
.emotion-0 {
  color: green;
}

<a
  aria-label="some label"
  class="emotion-0 emotion-1"
  data-wow="value"
  href="link"
  is="true"
>
  hello world
</a>
`;

exports[`prop filtering on composed styled components that are string tags 1`] = `
.emotion-0 {
  background-color: hotpink;
  color: green;
}

<a
  aria-label="some label"
  class="emotion-0 emotion-1"
  data-wow="value"
  for="other reasons"
  href="link"
>
  hello world
</a>
`;

exports[`shouldForwardProp should get inherited for wrapped styled components 1`] = `
.emotion-0 {
  background-color: red;
}

<div
  class="emotion-0 emotion-1"
  id="test-1"
/>
`;

exports[`withComponent inherits explicit shouldForwardProp 1`] = `
.emotion-0 {
  color: hotpink;
}

<span
  class="emotion-0 emotion-1"
/>
`;

exports[`withComponent inherits explicit shouldForwardProp from flattened component 1`] = `
.emotion-0 {
  color: hotpink;
  background-color: blue;
}

<span
  class="emotion-0 emotion-1"
/>
`;

exports[`withComponent should accept shouldForwardProp 1`] = `
.emotion-0 {
  color: hotpink;
}

<span
  class="emotion-0 emotion-1"
/>
`;

exports[`withComponent should compose shouldForwardProp 1`] = `
.emotion-0 {
  color: hotpink;
}

<span
  class="emotion-0 emotion-1"
/>
`;

exports[`withComponent should compose shouldForwardProp with a flattened component 1`] = `
.emotion-0 {
  color: hotpink;
}

<span
  class="emotion-0 emotion-1"
/>
`;
